--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "clean": "rimraf lib && rimraf coverage",
     "format": "prettier --write \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
-    "lint": "tslint --force --format verbose \"src/**/*.ts\"",
+    "lint": "tslint --project tsconfig.json --format verbose",
     "prepublishOnly": "yarn build",
     "prebuildOnly": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "tsc --pretty",
@@ -40,16 +40,16 @@
     "@types/fs-extra": "^4.0.5",
     "@types/jest": "^20.0.5",
     "@types/js-yaml": "^3.10.1",
+    "@types/nock": "^8.2.1",
     "@types/node": "^8.0.0",
     "@types/request-promise-native": "^1.0.10",
-    "coveralls": "^2.0.0",
+    "@types/supertest": "^2.0.4",
     "jest": "^20.0.4",
-    "jest-environment-node-debug": "^2.0.0",
-    "jest-mock-express": "^0.1.1",
     "nock": "^9.1.4",
     "prettier": "^1.5.2",
     "rimraf": "^2.0.0",
     "sinon": "^4.1.2",
+    "supertest": "^3.0.0",
     "ts-jest": "^20.0.7",
     "ts-node": "^3.2.0",
     "tslint": "^5.0.0",
