--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "watch:test": "jest --watch"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
     "js-yaml": "^3.10.0",
+    "lodash.mapvalues": "^4.6.0",
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.18",
     "@types/express": "^4.0.39",
     "@types/fs-extra": "^4.0.5",
     "@types/jest": "^20.0.5",
     "@types/js-yaml": "^3.10.1",
+    "@types/lodash.mapvalues": "^4.6.0",
     "@types/nock": "^8.2.1",
     "@types/node": "^8.0.0",
     "@types/request-promise-native": "^1.0.10",
