--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/info-provider",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "info-provider",
   "license": "MIT",
   "repository": "https://github.com/hmcts/nodejs-info-provider",
@@ -20,8 +20,10 @@
     "watch": "yarn build --watch",
     "watch:test": "jest --watch"
   },
+  "peerDependencies": {
+    "express": ">=4"
+  },
   "dependencies": {
-    "express": "^4.21.2",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
@@ -42,7 +44,8 @@
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "express": "^5.1.0"
   },
   "engines": {
     "node": ">=16.0.0"
