--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.56.1",
     "eslint-config-prettier": "^9.0.0",
+    "express": "^5.1.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.0",
@@ -44,11 +45,10 @@
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.4",
-    "express": "^5.1.0"
+    "typescript": "^5.0.4"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.12.0"
   },
   "jest": {
     "transform": {
@@ -61,5 +61,5 @@
     ],
     "testEnvironment": "node"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@4.12.0"
 }
