--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,5 @@ jobs:
       - run: corepack enable
       - run: yarn install --immutable
       - run: yarn build
+      - run: yarn lint
       - run: yarn test
