--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rimraf lib && rimraf coverage",
     "format": "prettier --write \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
-    "lint": "eslint -c .eslintrc.js --ext .ts src && prettier --check \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
+    "lint": "tsc --noEmit && eslint . && prettier --check \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
     "prebuildOnly": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "tsc --pretty",
     "test": "jest",
@@ -27,16 +27,17 @@
     "js-yaml": "^4.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.25",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.19.130",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "express": "^5.2.1",
+    "globals": "^17.0.0",
     "jest": "^30.2.0",
     "prettier": "^3.7.4",
     "rimraf": "^6.1.2",
@@ -48,7 +49,7 @@
     "typescript": "^5.9.3"
   },
   "engines": {
-    "node": ">=18.12.0"
+    "node": ">=18.18.0"
   },
   "jest": {
     "transform": {
