--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/info-provider",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "info-provider",
   "license": "MIT",
   "repository": "https://github.com/hmcts/nodejs-info-provider",
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rimraf lib && rimraf coverage",
     "format": "prettier --write \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
-    "lint": "eslint -c .eslintrc.js --ext .ts src && prettier --check \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
+    "lint": "tsc --noEmit && eslint . && prettier --check \"{src,__tests__}/**/*.ts\" --single-quote --trailing-comma es5",
     "prebuildOnly": "yarn clean && yarn format && yarn lint && echo Using TypeScript && tsc --version",
     "build": "tsc --pretty",
     "test": "jest",
@@ -24,31 +24,32 @@
     "express": ">=4"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "^20.1.2",
-    "@types/supertest": "^6.0.0",
+    "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^18.19.130",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
-    "eslint": "^8.56.1",
-    "eslint-config-prettier": "^9.0.0",
-    "express": "^5.1.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "rimraf": "^5.0.0",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "express": "^5.2.1",
+    "globals": "^17.0.0",
+    "jest": "^30.2.0",
+    "prettier": "^3.7.4",
+    "rimraf": "^6.1.2",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.9.3"
   },
   "engines": {
-    "node": ">=18.12.0"
+    "node": ">=18.18.0"
   },
   "jest": {
     "transform": {
